@@ -471,6 +471,8 @@ public:
     //
     // selection related methods (inherited from wxDataViewWidgetImpl)
     //
+    virtual wxDataViewItem GetCurrentItem() const;
+    virtual void SetCurrentItem(const wxDataViewItem& item);
     virtual int  GetSelections(wxDataViewItemArray& sel)   const;
     virtual bool IsSelected(const wxDataViewItem& item) const;
     virtual void Select(const wxDataViewItem& item);
